# local-bio-agent-harness

./: .gitignore  AGENTS.md  Modelfile  README.md  ingest.py  opencode.json  pyproject.toml  spec_sheet.md
bioagent/: cli.py  config.py  context.py  models.py  tracing.py
configs/: base_env.txt  default.yaml  network_allowlist.yaml
examples/: 01_dendrogram.py  02_macrophage_origin_identities_de_volcano_go.py  03_cell_type_de_volcano_go_burn.py  04_cell_type_composition_table_sham_vs.py  05_4_apply_mapping_order_categories_and.py  06_milo_style_differential_abundance_pure_python.py  07_milo_neighborhood_da_graph_on_umap.py  08_pip_install_moscot.py  09_macrophage_origin_identities_de_volcano_go.py  10_per_mac_identity_timepoint_de_volcano.py  11_m_recruited_only_per_macrophage_subtypes.py  12_m_recruited_only_per_macrophage_subtypes.py  13_m_recruited_only_per_macrophage_subtypes.py  14_consecutive_timepoint_de_later_vs_earlier.py  15_consecutive_timepoint_de_later_vs_earlier.py  16_consecutive_timepoint_de_later_vs_earlier.py  17_four_way_plots_of_burn_vs.py  18_curated_panel_from_the_four_way.py  19_burn_vs_sham_deg_overlap_venn.py  20_burn_vs_sham_deg_overlap_venn.py  21_burn_vs_sham_deg_overlap_venn.py  22_upset_overlap_of_burn_sham_degs.py  23_per_upset_bin_enrichment_highlight_genes.py  24_d_left_per_type_timepoint_split.py  25_d_left_companion_same_type_timepoint.py  26_per_mac_identity_2_type_timepoint.py  27_1_define_your_original_color_palette.py  28_figure.py  29_unresolved_inflammation_mac_identity_cells_scored.py  30_figure_a_one_panel_per_mac.py  (+15 more)
(+34 files in other folders)
