[project]
name = "bioagent"
version = "0.1.0"
description = "A local benchmark of an LLM agent's de novo scRNA-seq cell-type calling (metrics + ablations + calibration)"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "pydantic>=2.7",       # data models + structured output
    "pyyaml>=6.0",         # config + KB seeds
    "httpx>=0.27",         # local model client + NCBI knowledge layer
    "numpy>=1.24",         # metrics (ARI, calibration)
    "jupyter-client>=8.6", # per-Run kernel (scanpy runs here, out of the LLM context)
    "ipykernel>=6.29",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-asyncio>=0.23", "ruff>=0.5"]

[project.scripts]
bioagent = "bioagent.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["bioagent"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"
